--- a/labs/lab_10/lab_10.rmd
+++ b/labs/lab_10/lab_10.rmd
@@ -109,11 +109,14 @@ kabbage_all_counties_percentage <- kabbage_all_counties %>%
   mutate(total_loans/kabbage_total*100) %>%
   arrange(desc(kabbage_all_counties_percentage))
 
-county_flips <- read_csv("data/county_fips.csv")
+county_fips <- read_csv("data/county_fips.csv")
 
+kabbage_all_counties_percentage_with_fips <- kabbage_all_counties_percentage %>%
+ left_join(county_fips, by=c("project_county_name" = "match_county","project_state" = "state" ))
 
+write_csv(kabbage_all_counties_percentage_with_fips, "data/kabbage_all_counties_percentage_with_fips.csv")
 
 
 ```
 
-**A3.**  
+**A3.** https://datawrapper.dwcdn.net/bS2AQ/1/
