--- a/pre_labs/pre_lab_11/pre_lab_11.Rmd
+++ b/pre_labs/pre_lab_11/pre_lab_11.Rmd
@@ -53,7 +53,7 @@ When you do, it should look something like this:
 
 ### Task: Load image
 **Task** Run the following code to load an image. Describe what you see in the answer space below.
-**Answer**
+**Answer** Multiple different files called hospitals with different extensions.
 
 ```{r, echo=FALSE}
 knitr::include_graphics(rep("images/geolayers2.png"))
@@ -63,7 +63,7 @@ Simlar to `readr`, the `sf` library has functions to read geographic data. In th
 
 ### Task: Load data
 **Task** Run the following code to load data. Describe what you see in the answer space below. What columns exist in this data?
-**Answer**
+**Answer** This loaded a hospitals data frame with 33 different columns of data. These colums include hospital names, addresses, type, status, population and more. There is also longitude and latitude data. 
 
 ```{r}
 hospitals <- st_read("data/Hospitals/Hospitals.shp")
@@ -77,7 +77,7 @@ Let's look at just Maryland hospitals. Good news -- `sf` plays very nicely with 
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** The output is a data frame with information about hospitals in Maryland.
 
 ```{r}
 md_hospitals <- hospitals %>% 
@@ -92,7 +92,7 @@ What kind of hospitals do we have?
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This output shows Maryland hospitals grouped by type and summarizes the amount of general acute care hospitals. 
 
 ```{r}
 md_hospitals %>%
@@ -107,7 +107,7 @@ Let's narrow our data to only look at the 50 "General Acute Care hospitals."
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This output changes the previous Maryland hospital data frame by filtering it by general acute care hospitals. 
 
 ```{r}
 
@@ -120,12 +120,13 @@ md_hospitals
 ```
 
 That gives us 50 hospitals in Maryland. Where are they? 
+Many of these hospitals are in Baltimore, but others are in other parts of Maryland including Silver Spring and Frederick.
 
 We can simply plot them on a longitude-latitude grid using ggplot.
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** The output is a scatter plot with longitude and latitude ponints as the x and y axes. 
 
 ```{r}
 md_hospitals %>%
@@ -148,10 +149,10 @@ Then load it:
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This code installed the tigris library. 
 
 ```{r}
-# install.packages('tigris')
+install.packages('tigris')
 library(tigris)
 ```
 
@@ -159,7 +160,7 @@ Now, let's use the counties() function from tigris to pull down a shapefile of a
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** The output of this code is a data frame with information by all U.S. counties. 
 ```{r}
 
 counties <- counties() 
@@ -177,7 +178,7 @@ This county shapefile has all 3233 U.S. counties.  We only want the Maryland cou
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This output returns all Maryland counties. 
 
 ```{r}
 md_counties <- counties %>%
@@ -189,7 +190,7 @@ To see what this looks like, let's plot it out with ggplot. We can pretty clearl
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This output shows a map of Maryland with longitutde and latitude on the x and y axes. 
 
 ```{r}
 md_counties %>%
@@ -206,7 +207,7 @@ We're also going to change things up a bit to put the datasets we want to displa
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This returns a map of Maryland with points on it. 
 
 ```{r}
 
@@ -225,7 +226,7 @@ We can get a sense of where the largest hospitals are, by changing the color of 
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This output color codes the map so it is more simple to read. As well as organizes the data by hospital beds. 
 
 ```{r}
 
@@ -248,14 +249,14 @@ First, let's load the libraries we'll need. We're also going to load tidycensus 
 
 ### Task: Load libraries
 **Task** Run the following code. Describe the output in the space below. Be sure to input your census api key.
-**Answer**
+**Answer** The output simply tells me to install my API key with 'install = TRUE' in future sessions. 
 
 ```{r}
 library(tidyverse)
 library(sf)
 library(janitor)
 library(tidycensus)
-#census_api_key("549950d36c22ff16455fe196bbbd01d63cfbe6cf")
+census_api_key("97677b7fa54c8bb69e6ed34e1b9841350e55ff82")
 
 ```
 
@@ -264,7 +265,7 @@ And now let's load the dataframe of hospital information from the previous chapt
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** The output of this code is a data frame with hospital data filtered by Maryland and by General Acute Care hospitals. 
 
 ```{r}
 md_hospitals <- st_read("data/Hospitals/Hospitals.shp") %>% 
@@ -281,7 +282,7 @@ Each hospital exists inside of a county, so we're going to first calculate the t
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This returns two columns, county and total_beds in maryland counties. 
 
 ```{r}
 
@@ -302,7 +303,7 @@ Next, we'll go out and get population data for each county from tidycensus.  The
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** The output is three columns with county name, variable = population and estimate. 
 
 ```{r}
 
@@ -318,7 +319,7 @@ Ultimately, we're going to join this county population table with our beds by co
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This output returns a data frame called md_county_population by population of B01001_001. 
 
 ```{r}
 
@@ -339,7 +340,7 @@ But there's a problem.  The column in our population data that has county names 
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This ouput shows the maryland county population data and the maryland beds by county data. 
 
 ```{r}
 
@@ -355,7 +356,7 @@ Let's clean the population table. We're going to rename the "NAME" column to "CO
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This output returns a data frame md_county_population that renames county to name, removes any white space that would prevent a proper join in the data, and then renames the column that contains population information from estimate to population. It basically cleans the data frames. 
 
 ```{r}
 md_county_population <- md_county_population %>%
@@ -374,7 +375,7 @@ Now we can join them.
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This output returns a data frame that combines the county population with beds by county to show md beds per 100k people. 
 
 ```{r}
 md_beds_per_100k <- md_county_population %>%
@@ -389,7 +390,7 @@ We have two NAs after we join, for Queen Anne's County and Carolina County.  Tha
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This output returns a data frame that combines the beds per 100k with the beds by county and converts Queen Anne's County and Carlolina County to 0 instead of NA. 
 
 ```{r}
 md_beds_per_100k <- md_county_population %>%
@@ -404,7 +405,7 @@ Our final step before visualization, let's calculate the number of beds per 100,
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This returns a data frame with all of the same information as above but with a new column with the number of beds per 100,000 for each county, sorting them from highest to lowest. 
 
 ```{r}
 md_beds_per_100k <- md_county_population %>%
@@ -423,7 +424,7 @@ Okay, now let's visualize.  We're going to build a choropleth map, with the colo
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This code returns a map of the state of Maryland that has the md_beds_per_100k data by longitutde and latitude. 
 
 ```{r}
 ggplot() + 
@@ -435,7 +436,7 @@ This map is okay, but the color scale makes it hard to draw fine-grained differe
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below.
-**Answer**
+**Answer** This is a new theme of the same map as above that is more asthetically pleasing. The range on the side is 200-600 instead of 0-600. 
 
 ```{r}
 ggplot() + 
@@ -450,7 +451,7 @@ So let's change the color scale to a "log" scale, which will help us see those d
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below. What patterns do you see?
-**Answer**
+**Answer** This is again a more asthetically pleasing map that has a the data with percentages instead of the scale from 200-600. 
 
 ```{r}
 ggplot() + 
