--- a/pre_labs/pre_lab_11/pre_lab_11.Rmd
+++ b/pre_labs/pre_lab_11/pre_lab_11.Rmd
@@ -379,7 +379,7 @@ Now we can join them.
 
 ```{r}
 md_beds_per_100k <- md_county_population %>%
-  left_join(md_beds_by_county)
+  left_join(md_beds_by_county,by=c("county"))
 
 md_beds_per_100k
 ```
